cmake_minimum_required( VERSION 2.6 FATAL_ERROR )
PROJECT(mdbq CXX)

SET(CPACK_SOURCE_GENERATOR "TGZ")
SET(CPACK_GENERATOR "DEB")
SET(CPACK_PACKAGE_NAME "mdbq")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "MongoDB Message Queue in C++")
SET(CPACK_PACKAGE_CONTACT "Hannes Schulz <schulz at ais dot uni-bonn dot de>")
SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README")
SET(CPACK_PACKAGE_VERSION_MAJOR "0")
SET(CPACK_PACKAGE_VERSION_MINOR "1")
SET(CPACK_PACKAGE_VERSION_PATCH ${DATESTR})
SET(CPACK_SOURCE_IGNORE_FILES "${CPACK_SOURCE_IGNORE_FILES};${CMAKE_SOURCE_DIR}/.git")
SET(CPACK_PACKAGE_INSTALL_DIRECTORY "mdbq")

SET(CPACK_DEBIAN_PACKAGE_DEPENDS    "libboost-dev (>= 1.42.0), mongodb (>2.0)" )
INCLUDE(CPack)

FIND_PACKAGE(Doxygen)
IF(DOXYGEN_FOUND)
	CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/doc/Doxyfile.in ${CMAKE_BINARY_DIR}/doc/Doxyfile)
	ADD_CUSTOM_COMMAND(
		DEPENDS ${CMAKE_BINARY_DIR}/doc/Doxyfile
		OUTPUT  ${CMAKE_BINARY_DIR}/doc/html/index.html
		COMMAND ${DOXYGEN_EXECUTABLE} ${CMAKE_BINARY_DIR}/doc/Doxyfile
		WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
		)
	ADD_CUSTOM_TARGET(doc DEPENDS ${CMAKE_BINARY_DIR}/doc/html/index.html)
ENDIF(DOXYGEN_FOUND)

SET(AIS_BOOST_LOCATION "/usr/local/src/boost_1_48_0" CACHE STRING "location of local boost installation")
OPTION(USE_LOCAL_BOOST "Assume boost is placed in ${AIS_BOOST_LOCATION}" ON)
IF(EXISTS "${AIS_BOOST_LOCATION}")
    IF(USE_LOCAL_BOOST)
        MESSAGE("Using local boost installation in ${AIS_BOOST_LOCATION}")
        SET (BOOST_ROOT "${AIS_BOOST_LOCATION}")
        SET (Boost_NO_SYSTEM_PATHS true)
    ELSEIF(USE_LOCAL_BOOST)
        MESSAGE("Using system-wide boost installation")
    ENDIF(USE_LOCAL_BOOST)
ENDIF(EXISTS "${AIS_BOOST_LOCATION}")

SET(AIS_MONGO_LOCATION "$ENV{HOME}/checkout/git/mongo" CACHE STRING "location of local mongo installation")
OPTION(USE_LOCAL_MONGO "Assume mongo is placed in ${AIS_MONGO_LOCATION}" ON)
IF(EXISTS "${AIS_MONGO_LOCATION}")
    IF(USE_LOCAL_MONGO)
        MESSAGE("Using local mongo installation in ${AIS_MONGO_LOCATION}")
        INCLUDE_DIRECTORIES(${AIS_MONGO_LOCATION}/..)
        #LINK_DIRECTORIES(${AIS_MONGO_LOCATION})
        LINK_DIRECTORIES("~/lib")
    ELSEIF(USE_LOCAL_MONGO)
        MESSAGE("Using system-wide boost installation")
    ENDIF(USE_LOCAL_MONGO)
ENDIF(EXISTS "${AIS_MONGO_LOCATION}")

# ---------- Find Boost Headers/Libraries -----------------------
SET (Boost_FIND_REQUIRED TRUE)
SET (Boost_FIND_QUIETLY TRUE)
SET (Boost_USE_MULTITHREADED TRUE)
SET (Boost_USE_STATIC_LIBS FALSE)
SET (Boost_ADDITIONAL_VERSIONS "1.39" "1.39.0" "1.40" "1.42" "1.43" "1.44" "1.45" "1.46" "1.47" "1.48" )
FIND_PACKAGE( Boost 1.42 COMPONENTS unit_test_framework date_time program_options filesystem thread system REQUIRED )
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

ENABLE_TESTING()
add_subdirectory(src)
